# pyrobosim

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  README.rst  docker-compose.mcp.yml  docker-compose.yaml  mypy.ini  package.xml  pytest.ini  setup.cfg  setup.py  test.py  test_script.py  tiago_simulation.repos
pyrobosim/: .gitignore  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.cfg  setup.py  test_script.py
pyrobosim/core/: hallway.py  locations.py  objects.py  robot.py  room.py  ros_interface.py  world.py  yaml.py
pyrobosim/data/: example_location_data.yaml  example_object_data.yaml  test_world.yaml
pyrobosim/data/templates/: link_template_polyline.sdf  model_template.config  model_template.sdf
pyrobosim/examples/: demo.py  demo_astar.py  demo_astar_grid.py  demo_dynamics.py  demo_fog_hallways.py  demo_grasping.py  demo_multirobot.py  demo_partial_obs_hallways.py  demo_partial_observability_hallway_states.py  demo_pddl.py  demo_planner_interface.py  demo_prm.py  demo_prm_grid.py  demo_rrt.py  demo_world_save.py  test_prm.py  test_rrt.py  test_world.py
pyrobosim/gui/: __init__.py  main.py  world.py  world_canvas.py
pyrobosim/navigation/: __init__.py  execution.py  occupancy_grid.py  search_graph.py  trajectory.py
pyrobosim/planning/: actions.py  ros_utils.py
pyrobosim/pyrobosim/: __init__.py
pyrobosim/pyrobosim/ai/: __init__.py  local_llm.py  policies.py
pyrobosim/pyrobosim/behaviors/: __init__.py  local_bt.py  rootstocks.py  run_bt_cli.py  validator.py
pyrobosim/pyrobosim/core/: __init__.py  dynamics.py  gazebo.py  hallway.py  locations.py  objects.py  robot.py  room.py  ros_interface.py  types.py  world.py  yaml.py  yaml_utils.py
pyrobosim/pyrobosim/data/: .gitignore  example_location_data.yaml  example_location_data1.yaml  example_location_data2.yaml  example_location_data3.yaml  example_location_data_accessories.yaml  example_location_data_furniture.yaml  example_object_data.yaml  example_object_data1.yaml  example_object_data_drink.yaml  example_object_data_food.yaml  location_data.yaml  object_data.yaml  pddlstream_simple_world.yaml  roscon_2024_location_data.yaml  roscon_2024_object_data.yaml  roscon_2024_workshop_world.yaml  test_world.yaml  test_world_multirobot.yaml  workshop_world.yaml
pyrobosim/pyrobosim/data/templates/: link_template_polyline.sdf  model_template.sdf  world_template.sdf  (+2 more)
pyrobosim/pyrobosim/gui/: __init__.py  action_runners.py  main.py  options.py  world_canvas.py
pyrobosim/pyrobosim/manipulation/: __init__.py  grasping.py
pyrobosim/pyrobosim/mcp/: __init__.py  bt_schema.py  eval_logger.py  mcp_server.py  run_bt_remote.py  sim_app.py  sim_server.py  skills.py  task_registry.py  world_entities.py
pyrobosim/pyrobosim/navigation/: __init__.py  a_star.py  a_star_mcschwartzman.py  astar_grid.py  execution.py  occupancy_grid.py  path_planner.py  planner_base.py  planner_registry.py  prm.py  prm_grid.py  rrt.py  search_graph.py  trajectory.py  types.py  visualization.py  world_graph.py
pyrobosim/pyrobosim/planning/: __init__.py  actions.py  ros_utils.py
pyrobosim/pyrobosim/sensor/: __init__.py  lidar.py
pyrobosim/pyrobosim/sensors/: __init__.py  lidar.py  sensor_registry.py  types.py
pyrobosim/pyrobosim/utils/: __init__.py  dynamics.py  general.py  graph_types.py  knowledge.py  logging.py  motion.py  path.py  path_reduction.py  polygon.py  pose.py  ros_conversions.py  search_graph.py  trajectory.py  waypoint_reducer.py  waypoint_utils.py  world_collision.py  world_motion_planning.py
pyrobosim/pyrobosim/web/: __init__.py  app.py  commands.py  figure.py  headless.py
pyrobosim/scratch/: mesh_convhull.py
pyrobosim/statistics/py3/: stream_simple.pkl
pyrobosim/test/: conftest.py  test_pyrobosim.py
pyrobosim/test/core/: test_dynamics.py  test_gazebo.py  test_get_entities.py  test_hallway.py  test_locations.py  test_objects.py  test_robot.py  test_room.py  test_world.py  test_yaml_utils.py
pyrobosim/test/manipulation/: test_grasping.py
pyrobosim/test/navigation/: test_astar.py  test_fog_hallways.py  test_occupancy_grid.py  test_partial_obs_hallways.py  test_partial_observability_hallway_states.py  test_prm.py  test_rrt.py  test_world_graph_planner.py
pyrobosim/test/planning/: test_pddlstream_manip.py  test_pddlstream_nav.py  test_task_objects.py
pyrobosim/test/sensors/: test_lidar.py
pyrobosim/test/system/: test_system.py  test_system_world.yaml
pyrobosim/test/utils/: test_general_utils.py  test_knowledge_utils.py  test_motion_utils.py  test_polygon_utils.py  test_pose_utils.py  test_search_graph.py  test_trajectory.py
pyrobosim/test/web/: test_web.py
pyrobosim/utils/: general.py  knowledge.py  polygon.py  pose.py  trajectory.py
pyrobosim/world/: gazebo.py  hallway.py  locations.py  objects.py  robot.py  room.py  ros_interface.py  search_graph.py  world.py  yaml.py
pyrobosim_msgs/: CMakeLists.txt  package.xml
pyrobosim_msgs/action/: DetectObjects.action  ExecuteTaskAction.action  ExecuteTaskPlan.action  FollowPath.action  PlanPath.action
pyrobosim_msgs/msg/: ActionExecutionOptions.msg  ExecutionResult.msg  GoalPredicate.msg  GoalSpecification.msg  HallwayState.msg  LocationState.msg  ObjectState.msg  Path.msg  RobotState.msg  TaskAction.msg  TaskPlan.msg  WorldInfo.msg  WorldState.msg
pyrobosim_msgs/srv/: RequestWorldInfo.srv  RequestWorldState.srv  ResetWorld.srv  SetLocationState.srv
pyrobosim_ros/: CMakeLists.txt  package.xml  setup.py
pyrobosim_ros/examples/: demo.py  demo_commands.py  demo_pddl_goal_publisher.py  demo_pddl_planner.py  demo_pddl_world.py  demo_velocity_publisher.py
pyrobosim_ros/launch/: demo.launch.py  demo.py  demo_commands.launch.py  demo_commands.py  demo_commands_multirobot.launch.py  demo_pddl.launch.py  demo_pddl.py
pyrobosim_ros/pyrobosim_ros/: __init__.py  ros_conversions.py  ros_interface.py
pyrobosim_ros/scripts/: demo_commands.py
pyrobosim_ros/test/: CMakeLists.txt  test_ros_conversions.py  test_ros_interface.py
(+185 files in other folders)
