<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pyrobosim</name>
  <version>4.3.4</version>
  <description>ROS 2 enabled 2D mobile robot simulator for behavior prototyping.</description>
  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/sea-bass/pyrobosim</url>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Execution dependencies -->
  <!--
    The third-party Python dependencies (matplotlib, shapely, PySide6, etc.)
    are managed through pip via pyproject.toml, since several of them do not
    have rosdep keys. Only the ROS-specific runtime dependency is listed here.
  -->
  <exec_depend>ament_index_python</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
