[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrobosim"
version = "4.3.4"
description = "2D mobile robot simulator for behavior prototyping."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sebastian Castro", email = "sebas.a.castro@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "adjustText",
    "astar",
    "matplotlib",
    "numpy",
    "pycollada",
    "PySide6>=6.4.0",
    "PyYAML",
    "shapely>=2.0.1",
    "scipy",
    "transforms3d",
    "trimesh",
    "typing_extensions",  # For compatibility with Python <= 3.10
]

[project.urls]
Homepage = "https://github.com/sea-bass/pyrobosim"

[tool.setuptools.packages.find]
include = ["pyrobosim", "pyrobosim.*"]

[tool.setuptools.package-data]
pyrobosim = ["data/**/*"]
